Updated project file for netbeans 7.2

--- a/java/palitsa/lib/nblibraries.properties
+++ b/java/palitsa/lib/nblibraries.properties
@@ -1,5 +1,7 @@
 libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
+libs.CopyLibs.displayName=CopyLibs Task
+libs.CopyLibs.prop-version=1.0
 libs.H2.classpath=\
     ${base}/H2/h2-1.3.164.jar
 libs.H2.javadoc=\
