--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /java/palitsa/nbproject/private/
 /java/palitsa/build/
 /java/palitsa/dist/
+/javaport/palitsa_core/nbproject/private/
+/javaport/thirdparty/*.jar
+
